--- a/Assignment3_n01519420/Assignment3_n01519420.csproj
+++ b/Assignment3_n01519420/Assignment3_n01519420.csproj
@@ -259,6 +259,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Teacher\List.cshtml" />
     <Content Include="Views\Teacher\Show.cshtml" />
+    <Content Include="Views\Teacher\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
